[project]
name = "snipeit-label-printer"
version = "0.1.0"
description = "A utility to generate and print Snipe-IT asset labels with QR codes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "qrcode>=8.2",
    "reportlab>=4.4.0",
    "pillow>=11.2.1",
    "pywin32>=310; sys_platform == 'win32'",
    "pypiwin32>=223; sys_platform == 'win32'",
    "python-dotenv>=1.0.1",
    "colorama>=0.4.6",
]
